<resources>
    <string name="app_name">Mod2Class4_1</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="numero">Número</string>
    <string name="direccion">Dirección</string>
    <string name="registrar">Registrar</string>
    <string name="ver_todos">Ver Todos</string>
    <string name="buscar">Buscar</string>
    <string name="llamar">Llamar</string>
    <string name="ver_mapa">Ver Mapa</string>

    <string name="api_key">AIzaSyCs7kmbk2xV0McxeczqBCaD2MVrGZC5y38</string>
</resources>
